--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,9 +18,9 @@
 			<a class="brand" href="#">Sukendhar</a>  
 		  </li>  
 		  <li><a href="#">Home</a></li>  
-		  <li><a href="#">About Me</a></li>  
-		  <li><a href="#">Family</a></li>  
-		  <li><a href="#">Contact</a></li> 
+		  <li><a href="#">About Us</a></li>  
+		  <li><a href="#">Services</a></li>  
+		  <li><a href="#">Contact Us</a></li> 
 		</ul>  
 
 
