Content added to home page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,13 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<h1>Sukendhar Reddy</h1>
+
+
+Software Engineer <br>
+Maisa Solutions <br>
+Email: sukendhar555@gmail.com</h5>
+
+<div style="width:500px; height:500px"><img src="http://a5.sphotos.ak.fbcdn.net/hphotos-ak-ash4/209095_187429354636106_7014177_o.jpg"></a></div>
+<h2>My Friends</h2>
+<div style="width:500px; height:500px"><img src="https://fbcdn-sphotos-a.akamaihd.net/hphotos-ak-ash4/456388_358687710832309_1253867838_o.jpg"></a></div>
+
+<div style="width:500px; height:500px"><img src="https://fbcdn-sphotos-a.akamaihd.net/hphotos-ak-snc6/s720x720/246545_461377987209240_1073400642_n.jpg"></a></div>
+
