--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
             color: #666;
             background: #222;
 			text-align:center;
+			margin-top:280px;
             padding: 17px 0 18px 0;
             border-top: 1px solid #000;
         }
