--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -1,6 +1,10 @@
 <% if user_signed_in? %>
+
+  <li style="margin-top:10px;">
+	(<%= current_user.name %>)
+  </li>  
   <li>
-  <%= link_to('Logout', destroy_user_session_path, :method=>'delete') %>        
+	<%= link_to('Logout', destroy_user_session_path, :method=>'delete') %>        
   </li>
 <% else %>
   <li>
