--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -1,2 +1,5 @@
-<h1>Main#home</h1>
-<p>Find me in app/views/main/home.html.erb</p>
+<h1>Home</h1>
+<h2>Name: Sukendhar Reddy</h2>
+Email: sukendhar555@gmail.com<br />
+
+<%= image_tag("http://a5.sphotos.ak.fbcdn.net/hphotos-ak-ash4/209095_187429354636106_7014177_o.jpg") %>
