--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1,7 +1,7 @@
 @import "twitter/bootstrap/bootstrap";
 body { 
 	padding-top: 60px;
-	padding-left: 20px;
+	padding-left: 0px;
 }
 
 @import "twitter/bootstrap/responsive";
@@ -31,3 +31,8 @@ body {
 //
 // Example:
 // @linkColor: #ff0000;
+
+.container, .navbar-fixed-top .container, .navbar-fixed-bottom .container{
+	width:960px;
+	position:relative;
+}
