--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,107 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Sampleapp</title>
+  <title>Sukendhar Reddy</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
-  <link href="/twitter-bootstrap/twitter-bootstrap-v2/docs/assets/css/bootstrap.css" rel="stylesheet">
-<style>
-        html, body {
-            height: 100%;
-        }
-		.mainbody{
-		margin-left:100px;
-		}
-        footer {
-            color: #666;
-            background: #222;
-			text-align:center;
-			margin-top:50px;
-			margin-left:-20px;
-            padding: 17px 0 18px 0px;
-            border-top: 1px solid #000;
-        }
-        footer a {
-            color: #999;
-        }
-        footer a:hover {
-            color: #efefef;
-        }
-        .wrapper {
-            min-height: 100%;
-            height: auto !important;
-            height: 100%;
-            margin: 0 auto -63px;
-        }
-        .push {
-            height: 63px;
-        }
-        /* not required for sticky footer; just pushes hero down a bit */
-        .wrapper > .container {
-            padding-top: 60px;
-        }
-    </style>
 </head>
 <body>
-
 
 <div class="navbar navbar-fixed-top">  
   <div class="navbar-inner">  
     <div class="container">   
 		 <ul class="nav">  
 		  <li class="active">  
-			<a class="brand" href="#">Sukendhar</a>  
+			<li><%= link_to('Sukendhar', home_index_path, :class=>"brand")  %>
 		  </li>  
-		  <li><a href="#">Home</a></li>  
-		  <li><a href="#">About Us</a></li>  
-		  <li><a href="#">Services</a></li>  
-		  <li><a href="#">Contact Us</a></li> 
+		  <li><%= link_to('Home', main_home_path)  %> </li>  
+		  <li><%= link_to('About Us', main_aboutus_path)  %></li>  
+		  <li><%= link_to('Services', main_services_path)  %></li>  
+		  <li><%= link_to('Contact Us', main_contactus_path)  %></li> 
 		</ul>  
-
-
-		<form class="navbar-search pull-right">  
-		  <input type="text" class="search-query" placeholder="Search">  
-		</form> 
-
-
-
-		<ul class="nav pull-right">  
-		  <li class="dropdown">  
-			<a href="#"  
-				  class="dropdown-toggle"  
-				  data-toggle="dropdown">  
-				  Social  
-				  <b class="caret"></b>  
-			</a>  
-			<ul class="dropdown-menu">  
-			 <li class="socials"><!-- Place this tag where you want the +1 button to render -->  
-		<g:plusone annotation="inline" width="150"></g:plusone>  
-		</li>  
-		  <li class="socials"><div class="fb-like" data-send="false" data-width="150" data-show-faces="true"></div></li>  
-		  <li class="socials"><a href="https://twitter.com/share" class="twitter-share-button">Tweet</a>  
-		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script></li>  
-			</ul>  
-		  </li>  
+		
+		<ul class="nav pull-right">
+			<%= render 'shared/navigation' %>
 		</ul>
-
-
-
-		<div id="fb-root"></div>  
-		<script>(function(d, s, id) {  
-		  var js, fjs = d.getElementsByTagName(s)[0];  
-		  if (d.getElementById(id)) return;  
-		  js = d.createElement(s); js.id = id;  
-		  js.src = "//connect.facebook.net/en_GB/all.js#xfbml=1";  
-		  fjs.parentNode.insertBefore(js, fjs);  
-		}(document, 'script', 'facebook-jssdk'));</script> 
-
-
-		<ul class="nav pull-right"> 
-		 <%= render 'shared/navigation' %>
-		</ul>
-
-    </div>  
+	</div>		
   </div>  
 </div> 
 
@@ -113,27 +36,12 @@
   <% end %>
   <%= yield %>
 </div>
-<!--
-<style>
-.sign_in{
-	background:black;
-	float:left;
-	width:400px;
-	height:360px;
-	padding-left:200px;
-	margin-left:400px;
-	margin-top:100px;
-	-webkit-border-radius: 10px;
-	-moz-border-radius: 10px;
-	border-radius: 10px;
-}
-</style>
--->
+
 <footer>
       <div class="container">
         ©2012 Sukendhar Reddy. All rights reserved.
       </div>
-    </footer>
+</footer>
 </body>
 </html>
 
