--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -1,7 +1,7 @@
 <% if user_signed_in? %>
 
   <li style="margin-top:10px;">
-	(<%= current_user.name %>)
+	(<b><%= current_user.name %></b>)
   </li>  
   <li>
 	<%= link_to('Logout', destroy_user_session_path, :method=>'delete') %>        
